--- a/EurekaProvider02/pom.xml
+++ b/EurekaProvider02/pom.xml
@@ -7,10 +7,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>EurekaConsumer</artifactId>
+    <artifactId>EurekaProvider02</artifactId>
     <packaging>jar</packaging>
 
-    <name>EurekaConsumer</name>
+    <name>EurekaProvider02</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,15 +32,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.netflix.ribbon/ribbon -->
-        <dependency>
-            <groupId>com.netflix.ribbon</groupId>
-            <artifactId>ribbon</artifactId>
-            <version>2.7.18</version>
-            <scope>runtime</scope>
-        </dependency>
-
 
     </dependencies>
 </project>
